--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,28 +1,32 @@
 body{
-    font-size: 2.5vw;
+    font-size: 2rem;
+    overflow-x: hidden;
 }
 
 .areas{
     display: flex;
     flex-direction: column;
     align-items: center;
-    border: 2px blue solid;
-    width: 100vw;
+    margin: auto;
+    width: 100%;
+}
+
+.areas, .projects, .links {
+    width: 100%;
 }
 
 .areas > .header{
+    font-size: 150%;
     justify-content: center;
     align-items: center;
     display: flex;
     flex-direction: inherit;
     height: 50vh;
-    border: 2px red solid;
 }
 
 .header > h1{
     width: auto;
     height: auto;
-    border: 2px red solid;
 
 }
 
@@ -31,8 +35,7 @@ body{
     white-space: nowrap;
     overflow: hidden;
     height: 10vh;
-    width: 40vw;
-    border: 2px orange solid;
+    width: 40%;
 }
 
 .scrollarea > p{
@@ -54,15 +57,14 @@ body{
 .links{
     display: flex;
     align-items: flex-start;
-    width: 100vw;
-    height: 1vh;
+    width: 100%;
+    height: 5vh;
 }
 
 .links > a > img{
     position: sticky;
     height: 5vh;
     width: 5vh;
-    border: 2px red solid;
 }
 
 .areas > .projects{
@@ -71,8 +73,6 @@ body{
     justify-content: center;
     flex-direction: column;
     height: 150vh;
-    width: 100vw;
-    border: 2px green solid;
 }
 
 .projects > div{
@@ -81,7 +81,6 @@ body{
     place-items: center;
     height: 50vh;
     width: 100vw;
-    border: 2px green solid;
 }
 
 .projects > div > a:link, a:visited{
@@ -91,7 +90,6 @@ body{
     text-decoration: none;  
     height: 25vh;
     width: 25vh;
-    border: 2px lightblue solid;
     border-radius: 20%;
 }
 
