--- a/subStyle.css
+++ b/subStyle.css
@@ -3,27 +3,58 @@ header{
     text-align: center;
     justify-content: center;
     flex-direction: column;
-    font-size: 2.5vh;
+    font-size: 3rem;
     height: 50vh;
-    width: 100vw;
+    width: 100%;
+}
+
+header > h1{
+    height: auto;
+    width: 100%;
+}
+
+header > h1, header > a {
+    margin: 0;
+    padding: 0;
 }
 
 header > a{
-    border: 2px red solid;
-    height: 15rem
+    height: 5vh;
 }
 
 header > a > img{
-    height: 15rem;
-    width: 15rem;
-    border: 2px blue solid;
+    height: 5vh;
+    width: 5vh;
+}
+
+body{
+    font-size: 2rem;
 }
 
 .container{
     display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: start;
+    border: 2px blue solid;
+}
+
+.skills,.description{
+    display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    margin: 5%;
+}
+
+.container > .skills{
+    width: 25%;
+    border: 2px red solid;
+}
+
+.container > .description{
+    width: 50%;
+    border: 2px red solid;
 }
 
 
