--- a/mainStyle.css
+++ b/mainStyle.css
@@ -41,12 +41,12 @@ body{
 .scrollarea > p{
     font-size: 50%;
     position: absolute;
-    animation: scroll-left 30s linear infinite;
+    animation: scroll-left 15s linear infinite;
 }
 
 @keyframes scroll-left {
     0%{
-        transform: translateX(100%);
+        transform: translateX(25%);
     }
     100%{
         transform: translateX(-100%);
@@ -91,6 +91,13 @@ body{
     height: 25vh;
     width: 25vh;
     border-radius: 20%;
+    
+}
+
+.projects > div > a >img{
+    height: 25vh;
+    width: 25vh;
+    border-radius: 20%;
 }
 
 .projects > .new{
@@ -100,6 +107,39 @@ body{
 .projects > .old{
     height: 100vh;
 }
+
+@media (max-width: 600px) {
+    body {
+        font-size: 1.5rem;
+    }
+
+    .areas > .header {
+        font-size: 120%;
+        height: 40vh;
+    }
+
+    .header > .scrollarea {
+        width: 70%;
+        height: 8vh;
+    }
+
+    .projects > div {
+        grid-template-columns: auto;
+        height: auto;
+    }
+
+    .projects > div > a {
+        height: 20vh;
+        width: 20vh;
+    }
+
+    .projects > div > a > img {
+        height: 20vh;
+        width: 20vh;
+    }
+}
+
+
 
 
 
