--- a/mainStyle.css
+++ b/mainStyle.css
@@ -1,17 +1,22 @@
 body{
     font-size: 2rem;
     overflow-x: hidden;
+    background-color: #C9B79C;
 }
 
 .areas{
+    color: #342A21;
+    font-family:'Courier New', Courier, monospace;
     display: flex;
     flex-direction: column;
     align-items: center;
     margin: auto;
     width: 100%;
+    
 }
 
 .areas, .projects, .links {
+    text-shadow: 2px 2px 2px #8b8272;
     width: 100%;
 }
 
@@ -39,9 +44,10 @@ body{
 }
 
 .scrollarea > p{
+    color: #342A21;
     font-size: 50%;
     position: absolute;
-    animation: scroll-left 15s linear infinite;
+    animation: scroll-left 20s linear infinite;
 }
 
 @keyframes scroll-left {
@@ -62,7 +68,6 @@ body{
 }
 
 .links > a > img{
-    position: sticky;
     height: 5vh;
     width: 5vh;
 }
@@ -91,6 +96,9 @@ body{
     height: 25vh;
     width: 25vh;
     border-radius: 20%;
+    box-shadow: 10px 10px 3px #8b8272;
+    background: #71816D;
+    border: 5px #342A21 solid;
     
 }
 
@@ -109,6 +117,7 @@ body{
 .projects > .old{
     height: 100vh;
 }
+
 
 @media (max-width: 600px) {
     body {
